--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tremor/react": "^3.15.1",
     "apexcharts": "^3.48.0",
+    "csv-loader": "^3.0.5",
     "d3": "^7.9.0",
     "framer-motion": "^11.0.28",
+    "fs": "^0.0.1-security",
     "groq-sdk": "^0.3.3",
     "heatmap.js": "^2.0.5",
     "i": "^0.3.7",
